# pyfit

./: .gitignore  .pylintrc  .travis.yml  ACKNOWLEDGMENTS.md  LICENSE  README.md  demo.ipynb  mypy.ini  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yaml  publish-package.yaml
demos/: classification.py  neighbors.py
examples/: knn_planar_data.ipynb
katalib/: activation.py  layer.py  loss.py  model.py  optimizer.py
katalib/tests/: test_loss.py
mlcore/: preprocessing.py  tensor.py
mlcore/metrics/: _regression.py
pyfit/: __init__.py  base.py  data.py  datasets.py  engine.py  loss.py  metrics.py  neighbors.py  nn.py  optim.py  plot.py  preprocessing.py  tensor.py  train.py
pyfit/metrics/: __init__.py  _classification.py  _distance.py  _regression.py
pyfit/nn/: __init__.py  _activations.py  _layers.py  _models.py
pyfit/nn2/: _layers.py
tests/: test_data.py  test_engine.py  test_loss.py  test_metrics.py  test_neighbors.py  test_nn.py  test_optim.py  test_preprocessing.py  test_train.py
