[tool.poetry]
name = "pyfit"
version = "1.0.2"
description = "A minimalist neural networks library built on a tiny autograd engine"
authors = ["Baptiste Pesquet <bpesquet@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bpesquet/pyfit"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.1.1"
mypy = "^1.9.0"
pytest-mypy = "^0.10.3"

[tool.poetry.group.demo.dependencies]
notebook = "^6.0"
graphviz = "^0.20.3"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
